# bazel-implementation-sample

./: .gitignore  BUILD.bazel  MODULE.bazel  README.md  gazelle_python.yaml  requirements.in  requirements.txt
src/app/: BUILD.bazel  numberGuesser.py
src/app/lib/: BUILD.bazel
src/main/app/: BUILD.bazel  MODULE.bazel  analyze.py  numberGuesser.py
src/main/app/lib/: lib.py
src/main/java/com/: BUILD.bazel  SharedLib.java
src/main/java/com/example1/: BUILD.bazel  RandomTextGenerator.java
src/main/java/com/example1/resources/: 1.txt  2.txt  3.txt
src/main/java/com/example2/: BUILD.bazel  HelloWorld.java
tests/java/: BUILD.bazel  SharedLibTest.java
tests/py_app/: BUILD.bazel  number_guesser_test.py
