# java_library(
#     name = "my_lib",
#     srcs = ["MyClass.java"],
#     deps = ["@maven//:com_google_guava_guava"],
# )

java_binary(
    name = "random_text_generator",
    srcs = glob(["RandomTextGenerator.java"]),
    main_class = "com.example1.RandomTextGenerator",
    resources = glob(["resources/*.txt"]),
)
